# CalculatorForInterview

./: .gitignore  CMakeLists.txt  main.cpp
include/: Calculator.hpp
src/: Calculator.cpp  main.cpp
